<resources>
    <string name="app_name">NotifMate</string>
    <string name="hello_this_app_requires_bluetooth_and_notification_access_to_function_properly">Hello! This app requires bluetooth and notification access to function properly</string>
    <string name="proceed">Proceed</string>
    <string name="sender">Sender</string>
    <string name="ic_receiver">Receiver Icon</string>
    <string name="receiver">Receiver</string>
    <string name="header_logo">Header Logo</string>
    <string name="backgroundImg">Background Image</string>
    <string name="stop">Stop</string>
    <string name="excludeApps">Exclude Apps</string>
    <string name="noDeviceSelected">No device selected</string>
    <string name="settings_button">Settings Button</string>
    <string name="play_pause_button">Play pause button</string>
    <string name="next_button">Next Button</string>
    <string name="close_settings">Close Settings</string>
    <string name="automatic_follow_device_theme">Automatic - Follow Device Theme</string>
    <string name="always_dark">Always Dark</string>
    <string name="always_bright">Always Bright</string>
    <string name="theme">Theme</string>
    <string name="overlay">Overlay</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="app_in_background">When app is in background</string>
    <string name="notif_source">Source of notifications</string>
    <string name="remote_local"><![CDATA[Remote & Local]]></string>
    <string name="remote_only">Remote only</string>
    <string name="local_only">Local only</string>
    <string name="music_source">Music Source</string>
    <string name="remote">Remote</string>
    <string name="local">Local</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_state">Unknown State</string>
    <string name="unknown_app">Unknown Application</string>
    <string name="unknown_source">Unknown Source</string>

</resources>