<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="?attr/backgroundColor"
    tools:context=".ActivityHome">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backgroundImg"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/header_logo"
            app:srcCompat="?attr/topLogo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/receiverView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:paddingLeft="125dp"
            android:paddingTop="62dp"
            android:paddingRight="125dp"
            android:paddingBottom="63dp"
            app:cardBackgroundColor="?attr/backgroundColor"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/ic_receiver"
                    android:src="?attr/icReceiver" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/receiver"
                    android:textColor="?attr/aeriGearColor"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/senderView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:paddingLeft="125dp"
            android:paddingTop="62dp"
            android:paddingRight="125dp"
            android:paddingBottom="63dp"
            app:cardBackgroundColor="?attr/backgroundColor"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/ic_receiver"
                    android:src="?attr/icSender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sender"
                    android:textSize="32sp"
                    android:textColor="?attr/aeriGearColor"
                    android:textStyle="bold" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</RelativeLayout>